--- a/app/views/loggedin/history.phtml
+++ b/app/views/loggedin/history.phtml
@@ -35,7 +35,7 @@
     <br><br><br><br>
 
     <div style="width:80%; height:500px; margin-left:10%; background-color: white; border: 3px solid lightblue; font-family:mp;">
-        <h1 style="text-align: center;">HISTORY</h1>
+        <h1 style="text-align: center;">RIWAYAT</h1>
         <hr>
         <div style="padding-left:5%; padding-right:5%;">
         <table class="table table-striped" style="padding-left:5%;">
