--- a/app/views/loggedin/pesan.phtml
+++ b/app/views/loggedin/pesan.phtml
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Sumbang &middot; booKesma</title>
+    <title>Reservasi &middot; booKesma</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Icon -->
 	<link rel="icon" type="icon/image" href="<?=$this->url->getBaseUri()?>/img/jpgpng/favicon.png">
@@ -41,28 +41,32 @@
 					FORM RESERVASI
 				</span>
 			</div>
+			<?=$this->tag->form([$this->url->getBaseUri().'user/koleksi/semester/'.$sem.'/'.$id_buku,'method'=>'post','class'=>'contact100-form validate-form']);?>
+			<!-- <form class="contact100-form validate-form"> -->
 
-			<form class="contact100-form validate-form">
-
-				<div class="wrap-input100 validate-input" data-validate="NRP is required">
-					<span class="label-input100">Tanggal Kembali:</span>
-					<input class="input100" type="date" name="tanggal_bertemu" placeholder="Masukkan Tanggal Kembali">
+				<div class="wrap-input100 validate-input" data-validate="Tanggal mengambil is required">
+					<span class="label-input100">Tanggal Mengambil Buku:</span>
+					<?php echo $form->render('tanggal'); ?>
+					<!-- <input class="input100" type="date" name="tanggal_bertemu" placeholder="Masukkan Tanggal Kembali"> -->
 					<span class="focus-input100"></span>
                 </div>
-                <div class="wrap-input100 validate-input" data-validate="NRP is required">
+                <div class="wrap-input100 validate-input" data-validate="No HP is required">
 					<span class="label-input100">No HP:</span>
-					<input class="input100" type="text" name="nomorhp" placeholder="Masukkan NO HP">
+					<?php echo $form->render('nohp'); ?>
+					<!-- <input class="input100" type="text" name="nomorhp" placeholder="Masukkan NO HP"> -->
 					<span class="focus-input100"></span>
                 </div>
                 <div class="container-contact100-form-btn">
-					<button class="contact100-form-btn">
+				<?php echo $form->render('submit'); ?>
+					<!-- <button class="contact100-form-btn">
 						<span>
 							Submit
 							<i class="fa fa-long-arrow-right m-l-7" aria-hidden="true"></i>
 						</span>
-					</button>
+					</button> -->
 				</div>
-			</form>
+			<?= $this->tag->endForm()?>
+			<!-- </form> -->
 		</div>
 	</div>
 
