--- a/app/views/loggedin/time.phtml
+++ b/app/views/loggedin/time.phtml
@@ -74,7 +74,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">Modal Header</h4>
+                            <h4 class="modal-title"><?=$b->judul_buku;?></h4>
                         </div>
                         <div class="modal-body">
                             <p>Judul Buku : <br> <?=$b->judul_buku;?></p>
