delete yg tidk perlu dan data diri

--- a/app/views/loggedin/how.phtml
+++ b/app/views/loggedin/how.phtml
@@ -71,7 +71,7 @@
 	<div style="width:30%; float:left; padding:3%;">
 	<h3>Mari pelajari cara pinjam buku pilihan Anda sebagai borrower. Untuk pinjam buku, Anda dibutuhkan untuk sudah berlangganan salah satu paket kami.</h3>
 	</div>
-	<div style="width:70%; display: inline-table; float:left;">
+	<div style="width:70%; display: inline-table;">
 		<button  style="background: url('https://www.bookabuku.com/file/frontend/images/how-thumbnail-borrow.jpg') no-repeat; width:100%; height:450px; background-position: center; background-size: cover; font-size: 30px; " class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2" color="black">PEMINJAMAN
 		</button>
 	</div>
