--- a/app/views/loggedin/pesan.phtml
+++ b/app/views/loggedin/pesan.phtml
@@ -44,7 +44,7 @@
 
 			<form class="contact100-form validate-form">
 
-				<div class="wrap-input100 validate-input" data-validate="NRP is required">
+				<div class="wrap-input100 validate-input" data-validate="Tanggal Kembali is required">
 					<span class="label-input100">Tanggal Kembali:</span>
 					<input class="input100" type="date" name="tanggal_bertemu" placeholder="Masukkan Tanggal Kembali">
 					<span class="focus-input100"></span>
