--- a/app/views/loggedin/kembali.phtml
+++ b/app/views/loggedin/kembali.phtml
@@ -44,8 +44,8 @@
 			<?=$this->tag->form([$this->url->getBaseUri().'user/kembali/'.$id_buku,'method'=>'post','class'=>'contact100-form validate-form']);?>
 			<!-- <form class="contact100-form validate-form"> -->
 
-				<div class="wrap-input100 validate-input" data-validate="Tanggal mengaembalikan is required">
-					<span class="label-input100">Tanggal Mengaembalikan Buku:</span>
+				<div class="wrap-input100 validate-input" data-validate="Tanggal mengembalikan is required">
+					<span class="label-input100">Tanggal Mengembalikan Buku:</span>
 					<?php echo $form->render('tanggal'); ?>
 					<!-- <input class="input100" type="date" name="tanggal_bertemu" placeholder="Masukkan Tanggal Kembali"> -->
 					<span class="focus-input100"></span>
